# drone-catch-system

./: .gitignore  README.md  TESTING.md
arm/: README.md  README.original.md
arm/teensy_firmware/: arm_main_v3p.ino
arm/v4_release/: ARCHITECTURE.md  CHANGELOG.md  README.md
arm/v4_release/arm_v4/: arm_v4.ino  catch_fsm.h  config.h  dance.h  eeprom_persist.h  kinematics.h  motors.h  poses.h  safety.h  sensors.h  serial_cmd.h  state.h  telemetry.h  tilt.h  trajectory.h  trilat.h  uwb.h  wrist.h
arm/v4_release/webpage/: arm_ctrl_v4.html
arm/web_control/: arm_ctrlv4.html
docs/: drone_catch_system_flowcharts.md  system_overview_flowchart.md
hand/: README.md
hand/servo_controller/: README.md  protocol.md
hand/servo_controller/arduino_firmware/: hand_servo_controller.ino
vision/: README.md
vision/black-vision-tracker/: README.md  pyproject.toml  tracker_config.example.json
vision/black-vision-tracker/black_vision/: __init__.py  cli.py  config.py  detector.py  tracker_config.py  tracking.py  uwb.py
vision/black-vision-tracker/tests/: test_detector.py  test_tracking.py  test_uwb.py
vision/esp32_cam_firmware/: cam_test_v5.ino
